# shaya-sussman-content-generator

./: .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  index.py  pyproject.toml  render.yaml  shaya_content_generator.py  vercel.json
api/: index.py
client/: ContentGenerator.tsx  shaya-content-client.js  shaya-content-client.ts
docs/: index.html
