[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shaya-content-generator"
version = "1.0.0"
description = "AI-powered content generator in Rabbi Shaya Sussman's voice"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Schulman Coaching", email = "contact@schulmancoaching.com"}
]
keywords = [
    "content-generation",
    "ai",
    "breslov",
    "torah",
    "psychology",
    "rabbi-shaya-sussman"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
shaya-content = "shaya_content_generator:main"

[project.urls]
Homepage = "https://github.com/Schulman-Coaching/shaya-sussman-content-generator"
Repository = "https://github.com/Schulman-Coaching/shaya-sussman-content-generator"
Issues = "https://github.com/Schulman-Coaching/shaya-sussman-content-generator/issues"

[tool.setuptools]
py-modules = ["shaya_content_generator", "api"]
